adl-frontend/src/test/resources/unit/error/semantic/params/Primitive1.adl

primitive params.Primitive1(a, b) extends api.Type1 {

  source {{ }};
  
  attribute int a1= a;
  attribute string s = b;
}
